@@ -18,12 +18,6 @@ BEGIN {
     @EXPORT = qw(vlan_determine_for_node);
 }
 
-use constant {
-    CONF_FILE => "/usr/local/pf/conf/switches.conf",
-    LOG_CONF_FILE => "/usr/local/pf/conf/log.conf",
-    LOG_FILE => "/usr/local/pf/logs/pfsetvlan.log",
-};
-                                
 use Log::Log4perl;
 
 use lib qw(/usr/local/pf/lib);
@@ -34,25 +28,28 @@ use pf::db;
 use pf::node qw(node_view);
 use pf::violation qw(violation_count_trap);
 use pf::SwitchFactory;
+use threads;
 
 require "/usr/local/pf/conf/pfsetvlan.pm";
 
 sub vlan_determine_for_node {
     my ($mac, $switch_ip, $ifIndex) = @_;
     my $logger = Log::Log4perl::get_logger('pf::vlan');
+    Log::Log4perl::MDC->put('tid', threads->self->tid());
+
     my $node_info = node_view($mac);
 
     my $correctVlanForThisMAC;
     if ((! defined($node_info)) || ($node_info->{'status'} ne 'reg')) {
         $logger->info("MAC: $mac is unregistered; belongs into registration VLAN");
-        my $switchFactory = new pf::SwitchFactory( -configFile => CONF_FILE);
+        my $switchFactory = new pf::SwitchFactory( -configFile => '/usr/local/pf/conf/switches.conf');
         my $switch = $switchFactory->instantiate($switch_ip);
         $correctVlanForThisMAC = $switch->{_registrationVlan};
     } else {
         my $open_violation_count = violation_count_trap($mac);
         if ($open_violation_count > 0) {
             $logger->info("$mac has $open_violation_count open violations(s) with action=trap; belongs into isolation VLAN.");
-            my $switchFactory = new pf::SwitchFactory( -configFile => CONF_FILE);
+            my $switchFactory = new pf::SwitchFactory( -configFile => '/usr/local/pf/conf/switches.conf');
             my $switch = $switchFactory->instantiate($switch_ip);
             $correctVlanForThisMAC = $switch->{_isolationVlan};
         } else {
