@@ -7,7 +7,8 @@
           (http://www.packetfence.org/mantis/view.php?id=383)
         unify log management
           (http://www.packetfence.org/mantis/view.php?id=356)
-
+        unify vlan_determine_for_node and node_determine_VLAN
+          (http://www.packetfence.org/mantis/view.php?id=357)
 
 
 1.7.3
